--- a/views/project.hbs
+++ b/views/project.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>index page</title>
+        <title>project page</title>
         
     </head>
     <body>
